--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@ input {
     font-size: 18px;
     padding: 10px;
     width: 80%;
+    margin: 5px;
 }
 .result {
     font-size: 18px;
     margin-top: 10px;
+}
+hr {
+    margin: 20px 0;
 }
 </style>
 </head>
@@ -34,8 +38,8 @@ input {
 <h2>🔊 Spelling Practice</h2>
 
 <button onclick="speakWord()">🔈 Speak Word</button>
+<button onclick="spellWord()">🔤 Spelling</button>
 <button onclick="randomWord()">🎲 Random Word</button>
-<button onclick="alphabetSpell()">🔤 A–Z</button>
 
 <br><br>
 
@@ -48,8 +52,15 @@ input {
 
 <div class="result" id="result"></div>
 
+<hr>
+
+<h3>➕ Add New Spelling</h3>
+<input id="newWord" placeholder="Enter new word">
+<br>
+<button onclick="addWord()">Add Spelling</button>
+
 <script>
-const words = [
+let words = [
  "Strawberry","Harbor","Purple","Computer","Language"
 ];
 
@@ -65,7 +76,7 @@ function speak(text) {
     speechSynthesis.speak(u);
 }
 
-// ---------- SPELL LETTERS ----------
+// ---------- SPELL LETTER BY LETTER ----------
 function speakSpelling(word) {
     let i = 0;
     function next() {
@@ -78,23 +89,32 @@ function speakSpelling(word) {
     next();
 }
 
+// ---------- BUTTON ACTIONS ----------
+function speakWord() {
+    if (currentWord) speak(currentWord);
+}
+
+function spellWord() {
+    if (currentWord) speakSpelling(currentWord);
+}
+
 // ---------- RANDOM WORD ----------
 function randomWord() {
-    currentWord = words[Math.floor(Math.random() * words.length)];
     resetUI();
+    currentWord = words[Math.floor(Math.random() * words.length)];
     speak(currentWord);
 }
 
-// ---------- NEXT WORD (WITH REVISION) ----------
+// ---------- NEXT WORD (WITH WRONG REVISION) ----------
 function nextWord() {
     resetUI();
     count++;
 
-    // After 3 words, revise wrong ones
+    // After every 3 words, repeat wrong spelling
     if (count % 3 === 0 && wrongWords.length > 0) {
         currentWord = wrongWords.shift();
         speak("Revision");
-        setTimeout(() => speak(currentWord), 800);
+        setTimeout(() => speak(currentWord), 700);
         return;
     }
 
@@ -103,10 +123,12 @@ function nextWord() {
     speak(currentWord);
 }
 
-// ---------- CHECK ----------
+// ---------- CHECK SPELLING ----------
 function checkSpelling() {
     const user = document.getElementById("answer").value.trim().toLowerCase();
     const res = document.getElementById("result");
+
+    if (!currentWord) return;
 
     if (user === currentWord.toLowerCase()) {
         res.innerHTML = "✅ Correct!";
@@ -115,37 +137,32 @@ function checkSpelling() {
         res.innerHTML = "❌ Wrong<br>Correct: " + currentWord;
         res.style.color = "red";
 
+        // save wrong word
         wrongWords.push(currentWord);
 
+        // speak correct + spelling
         speak(currentWord);
         setTimeout(() => speakSpelling(currentWord), 700);
     }
 }
 
-// ---------- A TO Z ----------
-function alphabetSpell() {
-    let charCode = 65;
-    function next() {
-        if (charCode <= 90) {
-            speak(String.fromCharCode(charCode));
-            charCode++;
-            setTimeout(next, 500);
-        }
-    }
-    next();
+// ---------- ADD NEW WORD ----------
+function addWord() {
+    const nw = document.getElementById("newWord").value.trim();
+    if (!nw) return;
+
+    words.push(nw);
+    document.getElementById("newWord").value = "";
+    alert("Added: " + nw);
 }
 
 // ---------- UTILS ----------
-function speakWord() {
-    if (currentWord) speak(currentWord);
-}
-
 function resetUI() {
     document.getElementById("answer").value = "";
     document.getElementById("result").innerHTML = "";
 }
 
-// Start first word
+// Start app
 nextWord();
 </script>
 
