--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ input {
 
 .revision-box {
     margin-top: 15px;
-    padding: 15px;
-    border-radius: 12px;
+    padding: 18px;
+    border-radius: 14px;
     background: linear-gradient(135deg, #dff9fb, #c7ecee);
     border: 2px solid #22a6b3;
     font-size: 20px;
@@ -42,7 +42,13 @@ input {
     color: #130f40;
 }
 
-.revision-box span {
+.revision-title {
+    margin-bottom: 10px;
+}
+
+.revision-spelling {
+    margin-top: 12px;
+    font-size: 22px;
     letter-spacing: 6px;
     color: #30336b;
 }
@@ -112,12 +118,12 @@ function nextWord() {
     resetUI();
     count++;
 
-    // 🔁 REVISION WORD (NORMAL BEHAVIOR + BOX)
+    // 🔁 REVISION WORD
     if (count % 3 === 0 && wrongWords.length > 0) {
         currentWord = wrongWords.shift();
         isRevision = true;
-        showRevision(currentWord);
-        speak(currentWord);   // 🔈 behaves like normal
+        showRevisionBox(currentWord);
+        speak(currentWord); // behaves like normal word
         return;
     }
 
@@ -145,14 +151,21 @@ function checkSpelling() {
     }
 }
 
-// ---------- SHOW REVISION BOX ----------
-function showRevision(word) {
+// ---------- REVISION UI ----------
+function showRevisionBox(word) {
     document.getElementById("revision").innerHTML = `
         <div class="revision-box">
-            🔁 REVISION WORD<br><br>
-            <span>${word.split("").join(" ")}</span>
+            <div class="revision-title">🔁 REVISION WORD</div>
+            <button onclick="showRevisionSpelling()">Show Spelling</button>
+            <div id="revSpelling" class="revision-spelling" style="display:none;"></div>
         </div>
     `;
+}
+
+function showRevisionSpelling() {
+    document.getElementById("revSpelling").style.display = "block";
+    document.getElementById("revSpelling").innerText =
+        currentWord.split("").join(" ");
 }
 
 // ---------- ADD NEW WORD ----------
