--- a/index.html
+++ b/index.html
@@ -86,7 +86,17 @@ hr {
 <button onclick="addWord()">Add Spelling</button>
 
 <script>
-let words = ["Strawberry","Harbor","Purple","Computer","Language"];
+let words = ["Strawberry","Harbor","Purple","Fertilizers","Toothpaste","Nutrients",
+             "Weight","Society","Gloves","Disease","Agriculture","Beginner","Instrument",
+             "Clapping","Protein","Oxygen","Temperatures","Koreans","Walking","Pine","Spanish",
+             "Immediately","Forbidden","Tourism","Variety","Coach","Rescue","Duties",
+             "Swimming","Equipment","Quiet","Strictly","Diver","October","Experience",
+             "Toaster","Reception","Australia","Minutes","Piano","Vacation","Democratic",
+             "Lawyer","Traning","Grocery","Bookings","Acknowledgement","Commercial","Photography",
+             "Math","Mathematics","Disinfected","Padded","Diet","Wildlife","Reserve","Security",
+             "Entertainment","Role","Nature","Management","Volunteer","Volunteering","Cities",
+             "Wooden","Skyscraper"];
+
 
 let currentWord = "";
 let wrongWords = [];
