--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ let words = ["Strawberry","Harbor","Purple","Fertilizers","Toothpaste","Nutrient
              "Lawyer","Traning","Grocery","Bookings","Acknowledgement","Commercial","Photography",
              "Math","Mathematics","Disinfected","Padded","Diet","Wildlife","Reserve","Security",
              "Entertainment","Role","Nature","Management","Volunteer","Volunteering","Cities",
-             "Wooden","Skyscraper"];
+             "Wooden","Skyscraper","Accommodation"];
 
 
 let currentWord = "";
